pipes, component practice

--- a/src/app/template/template.component.html
+++ b/src/app/template/template.component.html
@@ -1,1 +1,5 @@
-result is: {{ 2+2}}
+result of 2 + 2: {{ 2+2}}
+<br><br>
+get minimum of the numbers 5 and 4 using an equation: {{getMin(5,4)}}
+<br><br>
+get maximum of the numbers 5 and 4 using an equation: {{getMax(5,4)}}
