added new components, pics

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,6 @@
 <app-template></app-template>
 <br><br>
 {{'World' | templatePipe}}
+<br><br>
+Pics below being imported from a component: 
+<app-pic-import></app-pic-import>
