added new components, pics

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,5 @@
 <br><br>
 Pics below being imported from a component: 
 <app-pic-import></app-pic-import>
+
+<app-button-component></app-button-component>
