--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,8 @@ Pics below being imported from a component:
 <app-pic-import></app-pic-import>
 
 <app-button-component></app-button-component>
+
+
+<br><br>
+
+<event-listener></event-listener>
